@@ -123,7 +123,7 @@ class Turba_Api extends Horde_Registry_Api
         global $prefs, $session;
 
         // Bring in a clean copy of sources.
-        require TURBA_BASE . '/config/backends.php';
+        $cfgSources = Turba::availableSources();
 
         if ($session->get('turba', 'has_share')) {
             $shares = Turba::listShares(true);
